# candela

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.txt  Makefile  README.md  candela.rc  installer.nsi  plan.txt
src/: brightness.cpp  brightness.h  brightness.rs  bwfilter.cpp  bwfilter.h  colortemp.cpp  colortemp.h  gui.cpp  gui.h  gui.rs  main.cpp  main.rs  settings.cpp  settings.h  tray.cpp  tray.h  tray.rs
